--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
 		<servlet.version>2.5</servlet.version>
 		<jsp.version>2.1</jsp.version>
 		<jstl.version>1.2</jstl.version>
+		<taglib.version>1.1.2</taglib.version>
+
 
 		<!-- log -->
 
@@ -41,6 +43,8 @@
 		<!-- environment version -->
 
 		<!-- jdbc version -->
+		<druid.version>1.1.6</druid.version> 
+		<mysql.connector.version>6.0.6</mysql.connector.version>
 
 		<!-- ci -->
 
@@ -188,6 +192,29 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/taglibs/standard -->
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>${taglib.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>${druid.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connector.version}</version>
+		</dependency>
+		
+		<!-- log - slf4j + logback  -->
 
 
 	</dependencies>
