--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -3,7 +3,7 @@
 #==========================================#
 
 #================MySQL5.6=================#
-jdbc.driverClassName=
-jdbc.url=
-jdbc.username=
-jdbc.password=
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/puzzle?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=root
