--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 	<!-- developers info -->
 	<developers>
 		<developer>
-			<name>song</name>
+			<name>Song</name>
 			<email>swq11823386@163.com</email>
 		</developer>
 	</developers>
