--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -11,3 +11,9 @@ jdbc.password=root
 #++++++++++++++++++++++++++++++++++++++#
 #=============hibernate5===============#
 #++++++++++++++++++++++++++++++++++++++#
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.show_sql=true
+hibernate.format_sql=true
+hibernate.hbm2ddl.auto=update
+hibernate.jdbc.fetch_size=100
+hibernate.jdbc.batch_size=20
