--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
 
 
 		<!-- log -->
+		<slf4j.version>1.7.25</slf4j.version>
+		<log4j2.version>2.10.0</log4j2.version>
 
 		<!-- cache -->
 
@@ -214,7 +216,43 @@
 			<version>${mysql.connector.version}</version>
 		</dependency>
 		
-		<!-- log - slf4j + logback  -->
+		<!-- log - slf4j + log4j2  -->
+		<!-- slf4j -->
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>jcl-over-slf4j</artifactId>
+		    <version>${slf4j.version}</version>
+		</dependency>
+		
+		<!-- log4j2 -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		    <version>${log4j2.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>${log4j2.version}</version>
+		</dependency>
+		<!-- slf4j + log4j2 -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-slf4j-impl</artifactId>
+		    <version>${log4j2.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-web</artifactId>
+		    <version>${log4j2.version}</version>
+		</dependency>
+		
+
 
 
 	</dependencies>
