--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,11 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath*:applicationContext*.xml</param-value>
 	</context-param>
-	<!-- spring -->
+	
+	<!-- 详细描述见http://blog.csdn.net/jadyer/article/details/11991457 -->  
+	<listener>  
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>  
+	</listener>  
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
