--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -4,9 +4,9 @@
 
 #================MySQL5.6=================#
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/puzzle?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/puzzle?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.username=root
-jdbc.password=root
+jdbc.password=windows
 
 #++++++++++++++++++++++++++++++++++++++#
 #=============hibernate5===============#
